<resources>
    <string name="app_name">VAHAGN</string>
    <string name="name">Name</string>
    <string name="format_name">Format: </string>
    <string name="enter_name">Enter The Name</string>
    <string name="home_address">Home Address</string>
    <string name="format_address">Address Format</string>
    <string name="enter_home_address">Enter Home Address</string>
    <string name="home_phone">Home Phone Number</string>
    <string name="format_phone_number">Number Format</string>
    <string name="enter_home_phone">Enter Home Phone Number</string>
    <string name="blood_type">Enter Blood Type</string>

    <string name="emergency_contact">Emergency Contact Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_em_number">Enter Number</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="enter_em">Enter Contact</string>
    <string name="enter_the_name">Enter The Name</string>
    <string name="NA">NA</string>
    <string name="update_emergency_contact">Update Emergency Contact</string>
    <string name="update_user_information">update user Information</string>
    <string name="home1">Home</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="ambulance">Ambulance</string>
    <string name="emergency_contact1">Emergency Contact</string>
    <string name="fire_station">Fire Station</string>
    <string name="police">Police</string>
    <string name="sos">SOS</string>
    <string name="krishna_kant">Krishna kant</string>
    <string name="enter_the_address">Enter The Address</string>
    <string name="o_pacoket_ganga_nagar">O pacoket ganga nagar</string>
    <string name="enter_the_phone_number">Enter The Phone Number</string>
    <string name="enter_10_digit_number">Enter 10 digit number</string>
    <string name="enter_the_blood_group">Enter The Blood Group</string>
    <string name="select_the_emergency_contact_name">Select The Emergency Contact Name</string>
    <string name="radha_krishna">Radha Krishna</string>
    <string name="search">Search</string>
    <string name="enter_the_emergency_contact_number">Enter The Emergency Contact Number</string>
    <string name="enter_10_digit_number1">Enter 10 digit number</string>
    <string name="search1">Search</string>
    <string name="entries"><item>Blood Type</item><item>A-</item><item>A</item><item>A+</item></string>
    <string name="contact_number">ConTact Number</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="update_user_information1">Update User information</string>
    <string name="find">Find</string>
    <string name="google_map_key">AIzaSyA7m02jPjQfOV8pkZtuNWP7WONK2vha9qo</string>
    <string name="hospital">Hospital</string>
    <string name="restaurant">restaurant</string>
    <string name="atm">ATM</string>
    <string name="guest">Guest</string>
    <string name="owner_name">Name</string>
    <string name="device_owner">device Owner</string>
    <string name="guest_name">Guest</string>
    <string name="select_blood">Select Blood</string>
    <string name="number">Number</string>
    <string name="guest_phone_number">Guest Phone Number</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="preview">Preview</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="previews">hello everyman </string>
</resources>