<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Setting">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_emergency_contact"
        android:layout_gravity="center"
        android:id="@+id/contact"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_user_information"
        android:layout_gravity="center"
        android:id="@+id/information"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/home1"
        android:layout_gravity="center"
        android:id="@+id/home1"
        />
</LinearLayout>
</ScrollView>